--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
     <!-- Footer -->
     <footer>
         <p>Stay connected with us on <a href="https://www.youtube.com/channel/UCMOdyupQQE-wWuBfqg6b_3A" target="_blank">YouTube</a> for tutorials and updates.</p>
-        <p><strong><a href="https://www.github.com/SoulWebsite/aboutalan.html">About Alan</a></strong></p> <!-- Link to About Me Page -->
+        <p><strong><a href="https://aaru-bit.github.io/About-our-team./">About Alan</a></strong></p> <!-- Link to About Me Page -->
         <button onclick="toggleDarkMode()">Toggle Dark Mode</button>
     </footer>
 
